// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing Renders correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-2 WithStyles(ForwardRef(Container))-root-1 MuiContainer-maxWidthLg-8"
  >
    <div
      class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-justify-content-xs-center-28"
    >
      <div
        class="MuiGrid-root-10 WithStyles(ForwardRef(Grid))-root-113 WithStyles(ForwardRef(Grid))-root-114 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-align-items-xs-center-19 MuiGrid-grid-xs-12-56"
      >
        <div
          class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-10-54 MuiGrid-grid-md-6-78"
        >
          <div
            class="makeStyles-headerContainer-115"
          >
            <h6
              class="MuiTypography-root-116 MuiTypography-h6-126 MuiTypography-colorTextPrimary-141"
            >
              Test Bitcoin Strategies
            </h6>
            <p
              class="MuiTypography-root-116 MuiTypography-body2-117 MuiTypography-colorTextSecondary-142"
            >
              Snapshots are great. Landing looks good.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-150 makeStyles-paper-149 MuiPaper-elevation1-154 MuiPaper-rounded-151"
    >
      <div
        class="MuiGrid-root-10 makeStyles-firstRow-146 MuiGrid-container-11 MuiGrid-align-items-xs-center-19 MuiGrid-justify-content-xs-space-between-30"
      >
        <div>
          <label
            class="MuiFormControlLabel-root-178 makeStyles-checkbox-147"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-203 MuiIconButton-root-194 PrivateSwitchBase-root-190 MuiCheckbox-root-184 MuiCheckbox-colorPrimary-188 MuiIconButton-colorPrimary-198"
            >
              <span
                class="MuiIconButton-label-202"
              >
                <input
                  class="PrivateSwitchBase-input-193"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-206"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-486"
              />
            </span>
            <span
              class="MuiTypography-root-116 MuiFormControlLabel-label-183 MuiTypography-body1-118"
            >
              <p
                class="MuiTypography-root-116 MuiTypography-body2-117"
              >
                Only show deposits
              </p>
            </span>
          </label>
          <label
            class="MuiFormControlLabel-root-178 makeStyles-checkbox-147"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-203 MuiIconButton-root-194 PrivateSwitchBase-root-190 MuiCheckbox-root-184 MuiCheckbox-colorPrimary-188 MuiIconButton-colorPrimary-198"
            >
              <span
                class="MuiIconButton-label-202"
              >
                <input
                  class="PrivateSwitchBase-input-193"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-206"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-486"
              />
            </span>
            <span
              class="MuiTypography-root-116 MuiFormControlLabel-label-183 MuiTypography-body1-118"
            >
              <p
                class="MuiTypography-root-116 MuiTypography-body2-117"
              >
                Hide dust
              </p>
            </span>
          </label>
        </div>
        <div>
          <div
            aria-label="apy apr selector"
            class="MuiButtonGroup-root-217 makeStyles-apr-148"
            role="group"
          >
            <button
              aria-selected="true"
              class="MuiButtonBase-root-203 MuiButton-root-241 MuiButton-outlined-246 MuiButtonGroup-grouped-223 MuiButtonGroup-groupedHorizontal-224 MuiButtonGroup-groupedOutlined-231 MuiButtonGroup-groupedOutlinedHorizontal-232 MuiButtonGroup-groupedOutlined-231 makeStyles-selected-215 makeStyles-button-216"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-242"
              >
                APY
              </span>
              <span
                class="MuiTouchRipple-root-486"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-203 MuiButton-root-241 MuiButton-outlined-246 MuiButtonGroup-grouped-223 MuiButtonGroup-groupedHorizontal-224 MuiButtonGroup-groupedOutlined-231 MuiButtonGroup-groupedOutlinedHorizontal-232 MuiButtonGroup-groupedOutlined-231 makeStyles-button-216"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-242"
              >
                APR
              </span>
              <span
                class="MuiTouchRipple-root-486"
              />
            </button>
          </div>
          <div
            aria-label="currency selector"
            class="MuiButtonGroup-root-217"
            role="group"
          >
            <button
              aria-selected="true"
              class="MuiButtonBase-root-203 MuiButton-root-241 MuiButton-outlined-246 MuiButtonGroup-grouped-223 MuiButtonGroup-groupedHorizontal-224 MuiButtonGroup-groupedOutlined-231 MuiButtonGroup-groupedOutlinedHorizontal-232 MuiButtonGroup-groupedOutlined-231 makeStyles-selected-270 makeStyles-button-271"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-242"
              >
                USD
              </span>
              <span
                class="MuiTouchRipple-root-486"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-203 MuiButton-root-241 MuiButton-outlined-246 MuiButtonGroup-grouped-223 MuiButtonGroup-groupedHorizontal-224 MuiButtonGroup-groupedOutlined-231 MuiButtonGroup-groupedOutlinedHorizontal-232 MuiButtonGroup-groupedOutlined-231 makeStyles-button-271"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-242"
              >
                BTC
              </span>
              <span
                class="MuiTouchRipple-root-486"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 makeStyles-root-272 MuiGrid-container-11"
      >
        <div
          class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-true-44"
        >
          <div
            class="MuiFormControl-root-276 MuiTextField-root-275 makeStyles-formControl-273"
          >
            <label
              class="MuiFormLabel-root-292 MuiInputLabel-root-280 MuiInputLabel-formControl-286 MuiInputLabel-animated-289 MuiInputLabel-marginDense-287 MuiInputLabel-outlined-291"
              data-shrink="false"
              for="status-selector-id"
              id="status-selector-id-label"
            >
              Status
            </label>
            <div
              class="MuiInputBase-root-326 MuiOutlinedInput-root-311 MuiInputBase-formControl-327 MuiInputBase-marginDense-333 MuiOutlinedInput-marginDense-318"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="status-selector-id-label status-selector-id"
                class="MuiSelect-root-300 MuiSelect-select-301 MuiSelect-selectMenu-304 MuiSelect-outlined-303 MuiInputBase-input-337 MuiOutlinedInput-input-321 MuiInputBase-inputMarginDense-338 MuiOutlinedInput-inputMarginDense-322"
                id="status-selector-id"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-310"
                data-testid="status-selector-input"
                name="Status"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-206 MuiSelect-icon-306 MuiSelect-iconOutlined-309"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-348 MuiOutlinedInput-notchedOutline-320"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-350"
                >
                  <span>
                    Status
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-true-44"
        >
          <div
            class="MuiFormControl-root-276 MuiTextField-root-275 makeStyles-formControl-352"
          >
            <label
              class="MuiFormLabel-root-292 MuiInputLabel-root-280 MuiInputLabel-formControl-286 MuiInputLabel-animated-289 MuiInputLabel-marginDense-287 MuiInputLabel-outlined-291"
              data-shrink="false"
              for="platform-selector-id"
              id="platform-selector-id-label"
            >
              Platform
            </label>
            <div
              class="MuiInputBase-root-326 MuiOutlinedInput-root-311 MuiInputBase-formControl-327 MuiInputBase-marginDense-333 MuiOutlinedInput-marginDense-318"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="platform-selector-id-label platform-selector-id"
                class="MuiSelect-root-300 MuiSelect-select-301 MuiSelect-selectMenu-304 MuiSelect-outlined-303 MuiInputBase-input-337 MuiOutlinedInput-input-321 MuiInputBase-inputMarginDense-338 MuiOutlinedInput-inputMarginDense-322"
                id="platform-selector-id"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-310"
                data-testid="platform-selector-input"
                name="Platform"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-206 MuiSelect-icon-306 MuiSelect-iconOutlined-309"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-348 MuiOutlinedInput-notchedOutline-320"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-350"
                >
                  <span>
                    Platform
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-true-44"
        >
          <div
            class="MuiFormControl-root-276 MuiTextField-root-275 makeStyles-formControl-354"
          >
            <label
              class="MuiFormLabel-root-292 MuiInputLabel-root-280 MuiInputLabel-formControl-286 MuiInputLabel-animated-289 MuiInputLabel-marginDense-287 MuiInputLabel-outlined-291"
              data-shrink="false"
              for="rewards-selector-id"
              id="rewards-selector-id-label"
            >
              Rewards
            </label>
            <div
              class="MuiInputBase-root-326 MuiOutlinedInput-root-311 MuiInputBase-formControl-327 MuiInputBase-marginDense-333 MuiOutlinedInput-marginDense-318"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="rewards-selector-id-label rewards-selector-id"
                class="MuiSelect-root-300 MuiSelect-select-301 MuiSelect-selectMenu-304 MuiSelect-outlined-303 MuiInputBase-input-337 MuiOutlinedInput-input-321 MuiInputBase-inputMarginDense-338 MuiOutlinedInput-inputMarginDense-322"
                id="rewards-selector-id"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-310"
                data-testid="rewards-selector-input"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-206 MuiSelect-icon-306 MuiSelect-iconOutlined-309"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-348 MuiOutlinedInput-notchedOutline-320"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-350"
                >
                  <span>
                    Rewards
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-true-44 MuiGrid-grid-md-true-72 MuiGrid-grid-lg-6-92"
        >
          <div
            class="MuiFormControl-root-276 MuiTextField-root-275 makeStyles-root-356"
          >
            <div
              class="MuiInputBase-root-326 MuiOutlinedInput-root-311 MuiInputBase-formControl-327 MuiInputBase-adornedEnd-331 MuiOutlinedInput-adornedEnd-316 MuiInputBase-marginDense-333 MuiOutlinedInput-marginDense-318"
            >
              <input
                aria-invalid="false"
                aria-label="Vault Search"
                class="MuiInputBase-input-337 MuiOutlinedInput-input-321 MuiInputBase-inputAdornedEnd-342 MuiOutlinedInput-inputAdornedEnd-325 MuiInputBase-inputMarginDense-338 MuiOutlinedInput-inputMarginDense-322"
                placeholder="Search by vault name, token, rewards..."
                type="text"
                value=""
              />
              <div
                class="MuiInputAdornment-root-358 MuiInputAdornment-positionEnd-361 MuiInputAdornment-marginDense-364"
              >
                <button
                  aria-label="search"
                  class="MuiButtonBase-root-203 MuiIconButton-root-194 makeStyles-icon-357 MuiIconButton-sizeSmall-201"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-202"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-206"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-486"
                  />
                </button>
              </div>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-348 MuiOutlinedInput-notchedOutline-320"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-349"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
        >
          <button
            class="MuiButtonBase-root-203 MuiButton-root-241 MuiButton-text-243 MuiButton-textPrimary-244 MuiButton-fullWidth-264"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-242"
            >
              CLEAR ALL
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-150 MuiGrid-root-10 makeStyles-root-395 MuiGrid-container-11 MuiGrid-item-12 MuiPaper-elevation1-154 MuiPaper-rounded-151"
    >
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-2-34"
      >
        <div
          class="MuiGrid-root-10 makeStyles-spacingItem-397 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
        />
        <div
          class="MuiGrid-root-10 makeStyles-title-388 makeStyles-columnTitle-393 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-align-items-xs-center-19 MuiGrid-grid-xs-true-44 MuiGrid-grid-lg-4-90"
        >
          <p
            class="MuiTypography-root-116 makeStyles-title-388 MuiTypography-body2-117 MuiTypography-colorTextSecondary-142"
          >
            Vault
          </p>
          <button
            aria-label="sort descending by name"
            class="MuiButtonBase-root-203 MuiIconButton-root-194 makeStyles-sortIcon-389 makeStyles-nonSetSort-391"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-202"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-389"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-10 makeStyles-title-388 makeStyles-columnTitle-393 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-align-items-xs-center-19 MuiGrid-justify-content-xs-flex-end-29 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body2-117 MuiTypography-colorTextSecondary-142"
          >
            APY
          </p>
          <button
            aria-label="sort descending by APR"
            class="MuiButtonBase-root-203 MuiIconButton-root-194 makeStyles-sortIcon-389 makeStyles-nonSetSort-391"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-202"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-389"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-10 makeStyles-title-388 makeStyles-columnTitle-393 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-align-items-xs-center-19 MuiGrid-justify-content-xs-flex-end-29 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body2-117 MuiTypography-colorTextSecondary-142"
          >
            My Deposits
          </p>
          <button
            aria-label="sort descending by balance"
            class="MuiButtonBase-root-203 MuiIconButton-root-194 makeStyles-sortIcon-389 makeStyles-nonSetSort-391"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-202"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-389"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-10 makeStyles-title-388 makeStyles-columnTitle-393 makeStyles-tvlColumn-394 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-align-items-xs-center-19 MuiGrid-justify-content-xs-flex-end-29 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body2-117 MuiTypography-colorTextSecondary-142"
          >
            TVL
          </p>
          <button
            aria-label="sort descending by TVL"
            class="MuiButtonBase-root-203 MuiIconButton-root-194 makeStyles-sortIcon-389 makeStyles-nonSetSort-391"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-202"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-389"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-486"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-150 MuiCard-root-408 MuiGrid-root-10 makeStyles-root-399 MuiGrid-container-11 MuiGrid-direction-xs-column-14 MuiPaper-elevation1-154 MuiPaper-rounded-151"
    >
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-2-34 MuiGrid-item-12"
      >
        <div
          class="MuiGrid-root-10 makeStyles-iconBadgeContainer-403 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
        >
          <div
            class="makeStyles-root-409"
          >
            <img
              alt="curve-renBTC-wBTC-sBTC logo"
              class="makeStyles-position-410"
              src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-true-44 MuiGrid-grid-lg-4-90"
        >
          <h6
            class="MuiTypography-root-116 makeStyles-vaultName-404 MuiTypography-subtitle1-127"
          >
            Curve.fi renBTC/wBTC/sBTC
          </h6>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-flex-end-29 MuiGrid-grid-xs-true-44"
        >
          <div
            class="MuiBox-root-414 MuiBox-root-415"
          >
            <p
              class="MuiTypography-root-116 makeStyles-apr-411 MuiTypography-body1-118 MuiTypography-colorTextPrimary-141 MuiTypography-displayInline-144"
            >
              0.25%
            </p>
            <img
              class="makeStyles-apyInfo-413"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-flex-end-29 MuiGrid-grid-xs-true-44"
        >
          <div
            class="MuiBox-root-414 MuiBox-root-425"
          >
            <p
              class="MuiTypography-root-116 makeStyles-itemText-401 MuiTypography-body1-118"
            >
              $-
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-flex-end-29 MuiGrid-grid-xs-true-44"
        >
          <div
            class="MuiBox-root-414 MuiBox-root-429"
          >
            <p
              class="MuiTypography-root-116 makeStyles-itemText-401 MuiTypography-body1-118"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 makeStyles-tagsContainer-406 MuiGrid-container-11 MuiGrid-spacing-xs-2-34 MuiGrid-item-12 MuiGrid-align-items-xs-center-19"
      >
        <div
          class="MuiGrid-root-10 makeStyles-iconBadgeContainer-403 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
        />
        <div
          class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-true-44"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-2-34"
          >
            <div
              class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
            >
              <span
                class="MuiTypography-root-116 makeStyles-label-431 MuiTypography-caption-119 MuiTypography-displayInline-144"
              >
                Rewards:
              </span>
              <div
                class="MuiChip-root-432 makeStyles-tag-430 MuiChip-sizeSmall-433"
              >
                <span
                  class="MuiChip-label-454 MuiChip-labelSmall-455"
                >
                  Ecosystem Helper
                </span>
              </div>
            </div>
            <div
              class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
            >
              <span
                class="MuiTypography-root-116 makeStyles-label-431 MuiTypography-caption-119 MuiTypography-displayInline-144"
              >
                Platform:
              </span>
              <div
                class="MuiChip-root-432 makeStyles-tag-430 MuiChip-sizeSmall-433"
              >
                <span
                  class="MuiChip-label-454 MuiChip-labelSmall-455"
                >
                  Convex
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-150 MuiCard-root-408 MuiGrid-root-10 makeStyles-root-399 MuiGrid-container-11 MuiGrid-direction-xs-column-14 MuiPaper-elevation1-154 MuiPaper-rounded-151"
    >
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-2-34 MuiGrid-item-12"
      >
        <div
          class="MuiGrid-root-10 makeStyles-iconBadgeContainer-403 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
        >
          <div
            class="makeStyles-root-409"
          >
            <img
              alt="BADGER logo"
              class="makeStyles-position-462"
              src="/assets/icons/badger.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-true-44 MuiGrid-grid-lg-4-90"
        >
          <h6
            class="MuiTypography-root-116 makeStyles-vaultName-404 MuiTypography-subtitle1-127"
          >
            Badger
          </h6>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-flex-end-29 MuiGrid-grid-xs-true-44"
        >
          <div
            class="MuiBox-root-414 MuiBox-root-463"
          >
            <p
              class="MuiTypography-root-116 makeStyles-apr-411 MuiTypography-body1-118 MuiTypography-colorTextPrimary-141 MuiTypography-displayInline-144"
            >
              8.17%
            </p>
            <img
              class="makeStyles-apyInfo-413"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-flex-end-29 MuiGrid-grid-xs-true-44"
        >
          <div
            class="MuiBox-root-414 MuiBox-root-466"
          >
            <p
              class="MuiTypography-root-116 makeStyles-itemText-401 MuiTypography-body1-118"
            >
              $-
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-flex-end-29 MuiGrid-grid-xs-true-44"
        >
          <div
            class="MuiBox-root-414 MuiBox-root-469"
          >
            <p
              class="MuiTypography-root-116 makeStyles-itemText-401 MuiTypography-body1-118"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 makeStyles-tagsContainer-406 MuiGrid-container-11 MuiGrid-spacing-xs-2-34 MuiGrid-item-12 MuiGrid-align-items-xs-center-19"
      >
        <div
          class="MuiGrid-root-10 makeStyles-iconBadgeContainer-403 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
        />
        <div
          class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-true-44"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-2-34"
          >
            <div
              class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
            >
              <span
                class="MuiTypography-root-116 makeStyles-label-431 MuiTypography-caption-119 MuiTypography-displayInline-144"
              >
                Rewards:
              </span>
              <div
                class="MuiChip-root-432 makeStyles-tag-430 MuiChip-sizeSmall-433"
              >
                <span
                  class="MuiChip-label-454 MuiChip-labelSmall-455"
                >
                  DCA
                </span>
              </div>
            </div>
            <div
              class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
            >
              <span
                class="MuiTypography-root-116 makeStyles-label-431 MuiTypography-caption-119 MuiTypography-displayInline-144"
              >
                Platform:
              </span>
              <div
                class="MuiChip-root-432 makeStyles-tag-430 MuiChip-sizeSmall-433"
              >
                <span
                  class="MuiChip-label-454 MuiChip-labelSmall-455"
                >
                  Badger
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-150 MuiCard-root-408 MuiGrid-root-10 makeStyles-root-399 MuiGrid-container-11 MuiGrid-direction-xs-column-14 MuiPaper-elevation1-154 MuiPaper-rounded-151"
    >
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-2-34 MuiGrid-item-12"
      >
        <div
          class="MuiGrid-root-10 makeStyles-iconBadgeContainer-403 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
        >
          <div
            class="makeStyles-root-409"
          >
            <img
              alt="DIGG logo"
              class="makeStyles-position-470"
              src="/assets/icons/digg.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-true-44 MuiGrid-grid-lg-4-90"
        >
          <h6
            class="MuiTypography-root-116 makeStyles-vaultName-404 MuiTypography-subtitle1-127"
          >
            Digg
          </h6>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-flex-end-29 MuiGrid-grid-xs-true-44"
        >
          <div
            class="MuiBox-root-414 MuiBox-root-471"
          >
            <p
              class="MuiTypography-root-116 makeStyles-apr-411 MuiTypography-body1-118 MuiTypography-colorTextPrimary-141 MuiTypography-displayInline-144"
            >
              8.17%
            </p>
            <img
              class="makeStyles-apyInfo-413"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-flex-end-29 MuiGrid-grid-xs-true-44"
        >
          <div
            class="MuiBox-root-414 MuiBox-root-474"
          >
            <p
              class="MuiTypography-root-116 makeStyles-itemText-401 MuiTypography-body1-118"
            >
              $-
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-flex-end-29 MuiGrid-grid-xs-true-44"
        >
          <div
            class="MuiBox-root-414 MuiBox-root-477"
          >
            <p
              class="MuiTypography-root-116 makeStyles-itemText-401 MuiTypography-body1-118"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 makeStyles-tagsContainer-406 MuiGrid-container-11 MuiGrid-spacing-xs-2-34 MuiGrid-item-12 MuiGrid-align-items-xs-center-19"
      >
        <div
          class="MuiGrid-root-10 makeStyles-iconBadgeContainer-403 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
        />
        <div
          class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-true-44"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-2-34"
          >
            <div
              class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
            >
              <span
                class="MuiTypography-root-116 makeStyles-label-431 MuiTypography-caption-119 MuiTypography-displayInline-144"
              >
                Platform:
              </span>
              <div
                class="MuiChip-root-432 makeStyles-tag-430 MuiChip-sizeSmall-433"
              >
                <span
                  class="MuiChip-label-454 MuiChip-labelSmall-455"
                >
                  Badger
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Renders mobile version correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-2 WithStyles(ForwardRef(Container))-root-1 MuiContainer-maxWidthLg-8"
  >
    <div
      class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-justify-content-xs-center-28"
    >
      <div
        class="MuiGrid-root-10 WithStyles(ForwardRef(Grid))-root-113 WithStyles(ForwardRef(Grid))-root-114 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-align-items-xs-center-19 MuiGrid-grid-xs-12-56"
      >
        <div
          class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-10-54 MuiGrid-grid-md-6-78"
        >
          <div
            class="makeStyles-headerContainer-115"
          >
            <h6
              class="MuiTypography-root-116 MuiTypography-h6-126 MuiTypography-colorTextPrimary-141"
            >
              Test Bitcoin Strategies
            </h6>
            <p
              class="MuiTypography-root-116 MuiTypography-body2-117 MuiTypography-colorTextSecondary-142"
            >
              Snapshots are great. Landing looks good.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-150 makeStyles-paper-149 MuiPaper-elevation1-154 MuiPaper-rounded-151"
    >
      <div
        class="MuiGrid-root-10 MuiGrid-container-11"
      >
        <div
          class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-true-44"
        >
          <label
            class="MuiFormControlLabel-root-178"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-203 MuiIconButton-root-194 PrivateSwitchBase-root-190 MuiCheckbox-root-184 MuiCheckbox-colorPrimary-188 MuiIconButton-colorPrimary-198"
            >
              <span
                class="MuiIconButton-label-202"
              >
                <input
                  class="PrivateSwitchBase-input-193"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-206"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-488"
              />
            </span>
            <span
              class="MuiTypography-root-116 MuiFormControlLabel-label-183 MuiTypography-body1-118"
            >
              <p
                class="MuiTypography-root-116 MuiTypography-body2-117"
              >
                Only show deposits
              </p>
            </span>
          </label>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-flex-end-29 MuiGrid-grid-xs-true-44"
        >
          <button
            class="MuiButtonBase-root-203 MuiButton-root-241 MuiButton-text-243 makeStyles-button-486"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-242 makeStyles-buttonLabel-487"
            >
              <p
                class="MuiTypography-root-116 MuiTypography-body2-117 MuiTypography-displayInline-144"
              >
                Filters
              </p>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-206"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-150 MuiGrid-root-10 makeStyles-root-395 MuiGrid-container-11 MuiGrid-item-12 MuiPaper-elevation1-154 MuiPaper-rounded-151"
    >
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-2-34"
      >
        <div
          class="MuiGrid-root-10 makeStyles-spacingItem-397 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
        />
        <div
          class="MuiGrid-root-10 makeStyles-title-388 makeStyles-columnTitle-393 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-align-items-xs-center-19 MuiGrid-grid-xs-true-44 MuiGrid-grid-lg-4-90"
        >
          <p
            class="MuiTypography-root-116 makeStyles-title-388 MuiTypography-body2-117 MuiTypography-colorTextSecondary-142"
          >
            Vault
          </p>
          <button
            aria-label="sort descending by name"
            class="MuiButtonBase-root-203 MuiIconButton-root-194 makeStyles-sortIcon-389 makeStyles-nonSetSort-391"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-202"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-389"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-10 makeStyles-title-388 makeStyles-columnTitle-393 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-align-items-xs-center-19 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body2-117 MuiTypography-colorTextSecondary-142"
          >
            APY
          </p>
          <button
            aria-label="sort descending by APR"
            class="MuiButtonBase-root-203 MuiIconButton-root-194 makeStyles-sortIcon-389 makeStyles-nonSetSort-391"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-202"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-389"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-10 makeStyles-title-388 makeStyles-columnTitle-393 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-align-items-xs-center-19 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body2-117 MuiTypography-colorTextSecondary-142"
          >
            My Deposits
          </p>
          <button
            aria-label="sort descending by balance"
            class="MuiButtonBase-root-203 MuiIconButton-root-194 makeStyles-sortIcon-389 makeStyles-nonSetSort-391"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-202"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-389"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-10 makeStyles-title-388 makeStyles-columnTitle-393 makeStyles-tvlColumn-394 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-align-items-xs-center-19 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body2-117 MuiTypography-colorTextSecondary-142"
          >
            TVL
          </p>
          <button
            aria-label="sort descending by TVL"
            class="MuiButtonBase-root-203 MuiIconButton-root-194 makeStyles-sortIcon-389 makeStyles-nonSetSort-391"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-202"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-389"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-150 MuiCard-root-408 MuiGrid-root-10 makeStyles-root-498 MuiGrid-container-11 MuiGrid-direction-xs-column-14 MuiPaper-elevation1-154 MuiPaper-rounded-151"
    >
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12"
      >
        <div
          class="makeStyles-root-409"
        >
          <img
            alt="curve-renBTC-wBTC-sBTC logo"
            class="makeStyles-position-501"
            src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-116 makeStyles-name-500 MuiTypography-subtitle1-127 MuiTypography-displayInline-144"
        >
          Curve.fi renBTC/wBTC/sBTC
        </h6>
      </div>
      <div
        class="MuiGrid-root-10 makeStyles-info-499 MuiGrid-container-11 MuiGrid-item-12"
      >
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-direction-xs-column-14 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body1-118"
          >
            APY
          </p>
          <div
            class="MuiBox-root-414 MuiBox-root-502"
          >
            <p
              class="MuiTypography-root-116 makeStyles-apr-411 MuiTypography-body1-118 MuiTypography-colorTextPrimary-141 MuiTypography-displayInline-144"
            >
              0.25%
            </p>
            <img
              class="makeStyles-apyInfo-413"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-direction-xs-column-14 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body1-118"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-414 MuiBox-root-505"
          >
            <p
              class="MuiTypography-root-116 MuiTypography-body1-118"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 MuiGrid-item-12"
      >
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-430 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                Ecosystem Helper
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-430 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                Convex
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-150 MuiCard-root-408 MuiGrid-root-10 makeStyles-root-498 MuiGrid-container-11 MuiGrid-direction-xs-column-14 MuiPaper-elevation1-154 MuiPaper-rounded-151"
    >
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12"
      >
        <div
          class="makeStyles-root-409"
        >
          <img
            alt="BADGER logo"
            class="makeStyles-position-506"
            src="/assets/icons/badger.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-116 makeStyles-name-500 MuiTypography-subtitle1-127 MuiTypography-displayInline-144"
        >
          Badger
        </h6>
      </div>
      <div
        class="MuiGrid-root-10 makeStyles-info-499 MuiGrid-container-11 MuiGrid-item-12"
      >
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-direction-xs-column-14 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body1-118"
          >
            APY
          </p>
          <div
            class="MuiBox-root-414 MuiBox-root-507"
          >
            <p
              class="MuiTypography-root-116 makeStyles-apr-411 MuiTypography-body1-118 MuiTypography-colorTextPrimary-141 MuiTypography-displayInline-144"
            >
              8.17%
            </p>
            <img
              class="makeStyles-apyInfo-413"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-direction-xs-column-14 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body1-118"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-414 MuiBox-root-510"
          >
            <p
              class="MuiTypography-root-116 MuiTypography-body1-118"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 MuiGrid-item-12"
      >
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-430 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                DCA
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-430 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                Badger
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-150 MuiCard-root-408 MuiGrid-root-10 makeStyles-root-498 MuiGrid-container-11 MuiGrid-direction-xs-column-14 MuiPaper-elevation1-154 MuiPaper-rounded-151"
    >
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12"
      >
        <div
          class="makeStyles-root-409"
        >
          <img
            alt="DIGG logo"
            class="makeStyles-position-511"
            src="/assets/icons/digg.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-116 makeStyles-name-500 MuiTypography-subtitle1-127 MuiTypography-displayInline-144"
        >
          Digg
        </h6>
      </div>
      <div
        class="MuiGrid-root-10 makeStyles-info-499 MuiGrid-container-11 MuiGrid-item-12"
      >
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-direction-xs-column-14 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body1-118"
          >
            APY
          </p>
          <div
            class="MuiBox-root-414 MuiBox-root-512"
          >
            <p
              class="MuiTypography-root-116 makeStyles-apr-411 MuiTypography-body1-118 MuiTypography-colorTextPrimary-141 MuiTypography-displayInline-144"
            >
              8.17%
            </p>
            <img
              class="makeStyles-apyInfo-413"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-direction-xs-column-14 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body1-118"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-414 MuiBox-root-515"
          >
            <p
              class="MuiTypography-root-116 MuiTypography-body1-118"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 MuiGrid-item-12"
      >
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-430 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                Badger
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Renders tablet version correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-2 WithStyles(ForwardRef(Container))-root-1 MuiContainer-maxWidthLg-8"
  >
    <div
      class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-justify-content-xs-center-28"
    >
      <div
        class="MuiGrid-root-10 WithStyles(ForwardRef(Grid))-root-113 WithStyles(ForwardRef(Grid))-root-114 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-align-items-xs-center-19 MuiGrid-grid-xs-12-56"
      >
        <div
          class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-10-54 MuiGrid-grid-md-6-78"
        >
          <div
            class="makeStyles-headerContainer-115"
          >
            <h6
              class="MuiTypography-root-116 MuiTypography-h6-126 MuiTypography-colorTextPrimary-141"
            >
              Test Bitcoin Strategies
            </h6>
            <p
              class="MuiTypography-root-116 MuiTypography-body2-117 MuiTypography-colorTextSecondary-142"
            >
              Snapshots are great. Landing looks good.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-150 makeStyles-paper-149 MuiPaper-elevation1-154 MuiPaper-rounded-151"
    >
      <div
        class="MuiGrid-root-10 MuiGrid-container-11"
      >
        <div
          class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-true-44"
        >
          <label
            class="MuiFormControlLabel-root-178"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-203 MuiIconButton-root-194 PrivateSwitchBase-root-190 MuiCheckbox-root-184 MuiCheckbox-colorPrimary-188 MuiIconButton-colorPrimary-198"
            >
              <span
                class="MuiIconButton-label-202"
              >
                <input
                  class="PrivateSwitchBase-input-193"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-206"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-488"
              />
            </span>
            <span
              class="MuiTypography-root-116 MuiFormControlLabel-label-183 MuiTypography-body1-118"
            >
              <p
                class="MuiTypography-root-116 MuiTypography-body2-117"
              >
                Only show deposits
              </p>
            </span>
          </label>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-flex-end-29 MuiGrid-grid-xs-true-44"
        >
          <button
            class="MuiButtonBase-root-203 MuiButton-root-241 MuiButton-text-243 makeStyles-button-486"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-242 makeStyles-buttonLabel-487"
            >
              <p
                class="MuiTypography-root-116 MuiTypography-body2-117 MuiTypography-displayInline-144"
              >
                Filters & Search
              </p>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-206"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-150 MuiGrid-root-10 makeStyles-root-395 MuiGrid-container-11 MuiGrid-item-12 MuiPaper-elevation1-154 MuiPaper-rounded-151"
    >
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-2-34"
      >
        <div
          class="MuiGrid-root-10 makeStyles-spacingItem-397 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
        />
        <div
          class="MuiGrid-root-10 makeStyles-title-388 makeStyles-columnTitle-393 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-align-items-xs-center-19 MuiGrid-grid-xs-true-44 MuiGrid-grid-lg-4-90"
        >
          <p
            class="MuiTypography-root-116 makeStyles-title-388 MuiTypography-body2-117 MuiTypography-colorTextSecondary-142"
          >
            Vault
          </p>
          <button
            aria-label="sort descending by name"
            class="MuiButtonBase-root-203 MuiIconButton-root-194 makeStyles-sortIcon-389 makeStyles-nonSetSort-391"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-202"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-389"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-10 makeStyles-title-388 makeStyles-columnTitle-393 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-align-items-xs-center-19 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body2-117 MuiTypography-colorTextSecondary-142"
          >
            APY
          </p>
          <button
            aria-label="sort descending by APR"
            class="MuiButtonBase-root-203 MuiIconButton-root-194 makeStyles-sortIcon-389 makeStyles-nonSetSort-391"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-202"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-389"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-10 makeStyles-title-388 makeStyles-columnTitle-393 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-align-items-xs-center-19 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body2-117 MuiTypography-colorTextSecondary-142"
          >
            My Deposits
          </p>
          <button
            aria-label="sort descending by balance"
            class="MuiButtonBase-root-203 MuiIconButton-root-194 makeStyles-sortIcon-389 makeStyles-nonSetSort-391"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-202"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-389"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-10 makeStyles-title-388 makeStyles-columnTitle-393 makeStyles-tvlColumn-394 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-align-items-xs-center-19 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body2-117 MuiTypography-colorTextSecondary-142"
          >
            TVL
          </p>
          <button
            aria-label="sort descending by TVL"
            class="MuiButtonBase-root-203 MuiIconButton-root-194 makeStyles-sortIcon-389 makeStyles-nonSetSort-391"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-202"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-389"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-150 MuiCard-root-408 MuiGrid-root-10 makeStyles-root-498 MuiGrid-container-11 MuiGrid-direction-xs-column-14 MuiPaper-elevation1-154 MuiPaper-rounded-151"
    >
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12"
      >
        <div
          class="makeStyles-root-409"
        >
          <img
            alt="curve-renBTC-wBTC-sBTC logo"
            class="makeStyles-position-501"
            src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-116 makeStyles-name-500 MuiTypography-subtitle1-127 MuiTypography-displayInline-144"
        >
          Curve.fi renBTC/wBTC/sBTC
        </h6>
      </div>
      <div
        class="MuiGrid-root-10 makeStyles-info-499 MuiGrid-container-11 MuiGrid-item-12"
      >
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-direction-xs-column-14 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body1-118"
          >
            APY
          </p>
          <div
            class="MuiBox-root-414 MuiBox-root-502"
          >
            <p
              class="MuiTypography-root-116 makeStyles-apr-411 MuiTypography-body1-118 MuiTypography-colorTextPrimary-141 MuiTypography-displayInline-144"
            >
              0.25%
            </p>
            <img
              class="makeStyles-apyInfo-413"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-direction-xs-column-14 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body1-118"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-414 MuiBox-root-505"
          >
            <p
              class="MuiTypography-root-116 MuiTypography-body1-118"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 MuiGrid-item-12"
      >
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-430 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                Ecosystem Helper
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-430 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                Convex
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-150 MuiCard-root-408 MuiGrid-root-10 makeStyles-root-498 MuiGrid-container-11 MuiGrid-direction-xs-column-14 MuiPaper-elevation1-154 MuiPaper-rounded-151"
    >
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12"
      >
        <div
          class="makeStyles-root-409"
        >
          <img
            alt="BADGER logo"
            class="makeStyles-position-506"
            src="/assets/icons/badger.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-116 makeStyles-name-500 MuiTypography-subtitle1-127 MuiTypography-displayInline-144"
        >
          Badger
        </h6>
      </div>
      <div
        class="MuiGrid-root-10 makeStyles-info-499 MuiGrid-container-11 MuiGrid-item-12"
      >
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-direction-xs-column-14 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body1-118"
          >
            APY
          </p>
          <div
            class="MuiBox-root-414 MuiBox-root-507"
          >
            <p
              class="MuiTypography-root-116 makeStyles-apr-411 MuiTypography-body1-118 MuiTypography-colorTextPrimary-141 MuiTypography-displayInline-144"
            >
              8.17%
            </p>
            <img
              class="makeStyles-apyInfo-413"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-direction-xs-column-14 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body1-118"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-414 MuiBox-root-510"
          >
            <p
              class="MuiTypography-root-116 MuiTypography-body1-118"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 MuiGrid-item-12"
      >
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-430 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                DCA
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-430 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                Badger
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-150 MuiCard-root-408 MuiGrid-root-10 makeStyles-root-498 MuiGrid-container-11 MuiGrid-direction-xs-column-14 MuiPaper-elevation1-154 MuiPaper-rounded-151"
    >
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12"
      >
        <div
          class="makeStyles-root-409"
        >
          <img
            alt="DIGG logo"
            class="makeStyles-position-511"
            src="/assets/icons/digg.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-116 makeStyles-name-500 MuiTypography-subtitle1-127 MuiTypography-displayInline-144"
        >
          Digg
        </h6>
      </div>
      <div
        class="MuiGrid-root-10 makeStyles-info-499 MuiGrid-container-11 MuiGrid-item-12"
      >
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-direction-xs-column-14 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body1-118"
          >
            APY
          </p>
          <div
            class="MuiBox-root-414 MuiBox-root-512"
          >
            <p
              class="MuiTypography-root-116 makeStyles-apr-411 MuiTypography-body1-118 MuiTypography-colorTextPrimary-141 MuiTypography-displayInline-144"
            >
              8.17%
            </p>
            <img
              class="makeStyles-apyInfo-413"
              src="/assets/icons/apy-info.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-direction-xs-column-14 MuiGrid-grid-xs-true-44"
        >
          <p
            class="MuiTypography-root-116 MuiTypography-body1-118"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-414 MuiBox-root-515"
          >
            <p
              class="MuiTypography-root-116 MuiTypography-body1-118"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 MuiGrid-item-12"
      >
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-auto-43"
          >
            <div
              class="MuiChip-root-432 makeStyles-tag-430 MuiChip-sizeSmall-433"
            >
              <span
                class="MuiChip-label-454 MuiChip-labelSmall-455"
              >
                Badger
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
